[MCLEAN-109] Add METRO hash implementation (#58)