@@ -23,19 +23,20 @@ Cache tuning could significantly reduce resource consumption and build execution
 
 ### Hash algorithm selection
 
-By default, the cache uses the SHA-256 algorithm, which is sufficiently fast and provides a negligible probability of hash
-collisions. In projects with a large codebase, the performance of hash algorithms becomes more critical, and other algorithms like
-[XX](https://cyan4973.github.io/xxHash/) or XXMM (memory-mapped files) could provide better performance.
+By default, the cache uses the [XX](https://cyan4973.github.io/xxHash/) algorithm, which is a very fast hash algorithm and should be enough for most use cases. 
+In projects with a large codebase, the performance of hash algorithms becomes more critical, and other algorithms like
+XXMM (XX with memory-mapped files) could provide better performance, depending on the environment.
 
 ```xml
 <hashAlgorithm>XX</hashAlgorithm>
 ```
 
-or
-```xml
-
-<hashAlgorithm>XXMM</hashAlgorithm>
+Also note that the usage of the XXMM or METRO+MM algorithms require the creation of a file `.mvn/jvm.config` in the 
+top directory with the following line to run successfully on JDK >= 17.
 ```
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+```
+
 
 ### Filter out unnecessary artifacts
 
